clang/test/BSC/Negative/Trait/GenericTrait/trait_assign_to_int/trait_assign_to_int.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Trait F<T> {
  T foo(This* this);
};

int int::foo(int* this) {
  return 0;
}

_Impl _Trait F<int> for int;

_Trait F<int>* get(_Trait F<int>* f) {
  return f;
};

int main() {
  int a = 1;
  int b = get(&a); // expected-error {{initializing 'int' with an expression of incompatible type '_Trait F<int> *'}}
  return 0;
}
